--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -1,20 +1,1 @@
-:host {
-  display: block;
-}
-
-nz-page-header {
-  background-color: white;
-}
-
-.card-list {
- nz-card {
-   width: 100%;
-   .card-grid-cell {
-     width: 50%;
-   }
- }
-}
-
-nz-page-header-title.flagged {
-  padding-left: .75em;
-}
+@import 'overrides/entity-page-header.overrides.less';
