--- a/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
+++ b/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
@@ -1,4 +1,6 @@
 <ng-container *ngIf="organization$ | ngrxPush as organization">
+  <cvc-section-navigation [displayName]="organization.name">
+  </cvc-section-navigation>
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal"
@@ -16,95 +18,8 @@
       </nz-space>
     </nz-page-header-title>
 
-    <!--extra-->
-    <nz-page-header-extra *ngrxLet="viewer$ as viewer">
-      <nz-space nzDirection="horizontal" nzSize="small">
-        <nz-space-item>
-          <nz-button-group>
-            <button routerLink="members"
-              routerLinkActive
-              #rlaMembers="routerLinkActive"
-              [nzType]="rlaMembers.isActive ? 'primary' : 'default'"
-              nz-button
-              nzSize="small">
-              <i nz-icon
-                nzType="pic-right"></i>Members
-            </button>
-          </nz-button-group>
-        </nz-space-item>
-        <nz-space-item *ngIf="organization.subGroups.length > 0">
-          <nz-button-group>
-            <button routerLink="groups"
-              routerLinkActive
-              #rlaGroups="routerLinkActive"
-              [nzType]="rlaGroups.isActive ? 'primary' : 'default'"
-              nz-button
-              nzSize="small">
-              <i nz-icon
-                nzType="civic:organization"></i>Child Organizations
-            </button>
-          </nz-button-group>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-button-group>
-            <button routerLink="evidence"
-              routerLinkActive
-              #rlaEvidence="routerLinkActive"
-              [nzType]="rlaEvidence.isActive ? 'primary' : 'default'"
-              nz-button
-              nzSize="small">
-              <i nz-icon
-                nzType="civic:evidence"></i>Evidence Items
-            </button>
-          </nz-button-group>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-button-group>
-            <button routerLink="assertions"
-              routerLinkActive
-              #rlaAssertions="routerLinkActive"
-              [nzType]="rlaAssertions.isActive ? 'primary' : 'default'"
-              nz-button
-              nzSize="small">
-              <i nz-icon
-                nzType="civic:assertion"></i>Assertions
-            </button>
-          </nz-button-group>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-button-group>
-            <button routerLink="activity"
-              routerLinkActive
-              #rlaActivity="routerLinkActive"
-              [nzType]="rlaActivity.isActive ? 'primary' : 'default'"
-              nz-button
-              nzSize="small">
-              <i nz-icon
-                nzType="civic:event"></i>Activity
-            </button>
-          </nz-button-group>
-        </nz-space-item>
-      </nz-space>
-        <button nz-button
-          nzSize="small"
-          nz-dropdown
-          [nzDropdownMenu]="menu"
-          nzNoAnimation
-          style="border: none; padding: 0">
-          <i nz-icon
-            nzType="ellipsis"
-            nzTheme="outline"
-            style="font-size: 20px; vertical-align: top;"></i>
-        </button>
-      <nz-dropdown-menu #menu="nzDropdownMenu">
-        <ul nz-menu>
-          <li nz-menu-item>1st menu item length</li>
-          <li nz-menu-item>2nd menu item length</li>
-          <li nz-menu-item>3rd menu item length</li>
-        </ul>
-      </nz-dropdown-menu>
-    </nz-page-header-extra>
     <nz-page-header-content>
+      <cvc-tab-navigation [tabs]="tabs"></cvc-tab-navigation>
       <div class="content">
         <nz-space>
           <nz-space-item>
