add source suggestion grid to user profile pages (and stub in on org pages)

--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -55,7 +55,7 @@
         </nz-select>
       </th>
       <th>
-        <cvc-clearable-input-filter [(inputModel)]="submitterInput"
+        <cvc-clearable-input-filter *ngIf="!this.submitterId" [(inputModel)]="submitterInput"
           placeholderText="Submitter"
           [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
       </th>
