--- a/client/src/app/forms/sources/types/source-input/source-input.type.html
+++ b/client/src/app/forms/sources/types/source-input/source-input.type.html
@@ -2,6 +2,6 @@
   <cvc-source-selector (sourceSelected)="onSourceSelected($event)"></cvc-source-selector>
 </ng-container>
 <ng-template #sourceListItem>
-  <cvc-source-list-item [source]="formControl.value"></cvc-source-list-item>
+  <cvc-source-tag [source]="formControl.value"></cvc-source-tag>
 </ng-template>
 <pre>{{ model | json }}</pre>
