fixed multi-field maxLength bug

--- a/client/src/app/forms/phenotypes/types/phenotype-input/phenotype-input.type.html
+++ b/client/src/app/forms/phenotypes/types/phenotype-input/phenotype-input.type.html
@@ -16,7 +16,7 @@
     </nz-option>
   </nz-select>
   <ng-template #sourceLoader>
-    No drug found in CIViC that matches the string provided.
+    No phenotype found in CIViC that matches the string provided.
   </ng-template>
 </ng-container>
 <ng-template #drugListItem>
