--- a/client/src/app/forms/evidence/forms/evidence-revise/evidence-revise.form.html
+++ b/client/src/app/forms/evidence/forms/evidence-revise/evidence-revise.form.html
@@ -2,22 +2,7 @@
   [formGroup]="formGroup"
   (ngSubmit)="submitRevision(formModel)"
   nzLayout="vertical">
-  <ng-container *ngIf="(submitError$ | async) as errors">
-    <nz-form-item *ngIf="errors.length > 0">
-      <cvc-form-errors-alert [errors]="errors">
-      </cvc-form-errors-alert>
-    </nz-form-item>
-  </ng-container>
-  <ng-container *ngIf="submitSuccess$ | async">
-    <nz-alert nzType="success"
-      nzMessage="Suggested Revision Submitted"
-      [nzDescription]="successMessage"
-      nzShowIcon></nz-alert>
-    <ng-template #successMessage
-      nzSize="small">
-      <p>View it on the <a routerLink="../revisions">Revisions Page</a> or suggest another revision below.</p>
-    </ng-template>
-  </ng-container>
+  <ng-container *ngTemplateOutlet="formMessages"></ng-container>
   <formly-form [form]="formGroup"
     [fields]="formFields"
     [model]="formModel"
@@ -39,7 +24,27 @@
       </cvc-form-buttons>
     </nz-form-control>
   </nz-form-item>
+  <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 </form>
+
+<ng-template #formMessages>
+  <ng-container *ngIf="(submitError$ | async) as errors">
+    <nz-form-item *ngIf="errors.length > 0">
+      <cvc-form-errors-alert [errors]="errors">
+      </cvc-form-errors-alert>
+    </nz-form-item>
+  </ng-container>
+  <ng-container *ngIf="submitSuccess$ | async">
+    <nz-alert nzType="success"
+      nzMessage="Suggested Revision Submitted"
+      [nzDescription]="successMessage"
+      nzShowIcon></nz-alert>
+    <ng-template #successMessage
+      nzSize="small">
+      <p>View it on the <a routerLink="../../revisions">Revisions Page</a> or suggest another revision below.</p>
+    </ng-template>
+  </ng-container>
+</ng-template>
 
 <!-- <div nz-row>
      <div nz-col nzSpan="12">
