--- a/client/src/app/components/shared/tab-navigation/tab-navigation.component.html
+++ b/client/src/app/components/shared/tab-navigation/tab-navigation.component.html
@@ -1,13 +1,14 @@
-<nz-row id="section-tabs">
+<nz-row id="section-tabs"  *ngrxLet="viewer$ as viewer">
   <nz-col nzSpan="24">
-    <nz-tabset nzType="card" nzSize="small"
+    <nz-tabset nzLinkRouter nzType="card" nzSize="small"
       [nzSelectedIndex]="selectedTabIndex"
       [nzTabBarExtraContent]="extraTpl">
       <ng-template #extraTpl>
           <ng-container [ngTemplateOutlet]="tabBarExtraContent || null" >
           </ng-container>
       </ng-template>
-      <nz-tab *ngFor="let tab of this.tabs">
+      <ng-component *ngFor="let tab of this.tabs">
+      <nz-tab *ngIf="tab.shouldDisplay === undefined || tab.shouldDisplay(viewer)">
         <a *nzTabLink
         nz-tab-link [routerLink]="tab.routeName">
         <i nz-icon
@@ -15,6 +16,7 @@
           {{tab.tabLabel}}
       </a>
       </nz-tab>
+    </ng-component>
     </nz-tabset>
   </nz-col>
 </nz-row>
