fda-variant table created, configured, populated

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -100,7 +100,7 @@
         nzTooltipPlacement="right"
         [nzTooltipTitle]="isCollapsed ? 'Clinical Trials' : ''"
         nzSelected nzMatchRouter>
-        <i nz-icon nzType="audit"></i>
+        <i nz-icon nzType="box-plot"></i>
         <span>
           <a routerLink="/clinical-trials">Clinical Trials</a>
         </span>
