New pipe for event action icon

--- a/client/src/app/components/events/event-timeline/event-timeline.component.html
+++ b/client/src/app/components/events/event-timeline/event-timeline.component.html
@@ -3,7 +3,7 @@
     <nz-timeline-item [nzDot]="timelineDotTemplate">
       <ng-template #timelineDotTemplate>
           <i nz-icon
-            [nzType]="iconNameForEventAction(event.action)"
+            [nzType]="event.action | iconNameForEventAction"
             nzTheme="twotone"
             class="item-icon"></i>
       </ng-template>
