--- a/client/src/app/views/users/users-notifications/users-notifications.component.less
+++ b/client/src/app/views/users/users-notifications/users-notifications.component.less
@@ -24,6 +24,10 @@
   }
 }
 
+.read-notification {
+  background-color: gray;
+}
+
 // reduce bottom margin on last timeline row
 nz-timeline ::ng-deep ul li:last-child {
   padding-bottom: 0;
