added item/filtered count, assertion col, colored fda labels

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -85,7 +85,7 @@
         nzSelected nzMatchRouter>
         <i nz-icon nzType="audit"></i>
         <span>
-          <a routerLink="/fda-variants">FDA Variants</a>
+          <a routerLink="/fda-variants">FDA Content</a>
         </span>
       </li>
     </ul>
