Add new pipe for iconNameForSubscribableEntity and use it in the notification subject filter list

--- a/client/src/app/components/events/event-feed/event-feed.component.html
+++ b/client/src/app/components/events/event-feed/event-feed.component.html
@@ -4,7 +4,7 @@
     id="card-content">
     <ng-template #cardTitle>
       <i nz-icon
-        [nzType]="iconNameForSubscribableEntity(subscribable.entityType)"
+        [nzType]="subscribable.entityType | iconNameForSubscribableEntity"
         *ngIf="subscribable"></i> {{ subscribableName }} Events
     </ng-template>
     <ng-template #cardExtra>
