--- a/client/src/app/components/shared/participant-list/participant-list.component.html
+++ b/client/src/app/components/shared/participant-list/participant-list.component.html
@@ -15,7 +15,7 @@
         nzType="default"
         nzSize="small"
         (click)="onExpandClicked()">
-        <i nz-icon nzType="arrow-down"></i>
+        <i nz-icon nzType="vertical-align-bottom"></i>
         Expand
     </button>
     <button *ngIf="this.isExpanded"
@@ -23,7 +23,7 @@
         nzType="default"
         nzSize="small"
         (click)="onCollapseClicked()">
-        <i nz-icon nzType="arrow-up"></i>
+        <i nz-icon nzType="vertical-align-top"></i>
         Collapse
     </button>
 </nz-card>
